--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mantine/hooks": "^4.2.10",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
