--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "tabler-icons-react": "^1.51.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
