implement laggy data handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,8 @@
     "titleBar.inactiveBackground": "#2258f199",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#2258f1"
+  "peacock.color": "#2258f1",
+  "cSpell.words": [
+    "laggy"
+  ]
 }
