--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,5 @@
     "titleBar.inactiveForeground": "#e7e7e799"
   },
   "peacock.color": "#2258f1",
-  "cSpell.words": [
-    "laggy"
-  ]
+  "cSpell.words": ["laggy"]
 }
